# shipclip

./: Cargo.toml  README.md  Rocket.toml
src/: main.rs
static/: index.html
templates/: browse.html.hbs  search.html.hbs  select_usb.html.hbs
