[package]
name = "shipclip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
#reqwest = {version = "0.11.6", features = ["multipart","blocking"]}
chrono = "0.4.19"
rscam = "0.5.5"
serde = "1.0.130"
regex = "1.5.5"
image = "0.24.2"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = [ "handlebars" ]
